varlen_example/shouldfail/invalid_len_expr.stderr
error[E0425]: cannot find value `x` in this scope
  --> shouldfail/invalid_len_expr.rs:11:15
   |
11 |     arr: [u8; x * y],
   |               ^ not found in this scope

error[E0425]: cannot find value `y` in this scope
  --> shouldfail/invalid_len_expr.rs:11:19
   |
11 |     arr: [u8; x * y],
   |                   ^ not found in this scope

error[E0425]: cannot find value `not_a_header` in this scope
  --> shouldfail/invalid_len_expr.rs:17:17
   |
17 |     arr3: [u8; *not_a_header],
   |                 ^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> shouldfail/invalid_len_expr.rs:14:16
   |
3  | #[define_varlen]
   | ---------------- expected `usize` because of return type
...
14 |     arr2: [u8; *u8_len],
   |                ^^^^^^^ expected `usize`, found `u8`
